<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".service.conference.create.CreateConferenceActivity">
    <RelativeLayout
        android:id="@+id/toolbar_rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height_44"
        >

        <TextView
            android:id="@+id/title_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="@dimen/view_space_18"
            android:paddingRight="@dimen/view_space_18"
            android:text="@string/cancel"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_size_14"
            />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/create_conference"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_size_16"
            />

        <TextView
            android:id="@+id/title_complete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:enabled="true"
            android:gravity="center"
            android:paddingLeft="@dimen/view_space_18"
            android:paddingRight="@dimen/view_space_18"
            android:textColor="@color/C4"
            android:text="完成"
            android:textSize="@dimen/text_size_14"
            />
    </RelativeLayout>
    <EditText
        android:id="@+id/et_conference_title"
        android:layout_marginLeft="@dimen/view_height_10"
        android:layout_marginRight="@dimen/view_height_22"
        android:background="@color/white"
        android:hint="请输入会议主题"
        android:padding="2dp"
        android:maxLines="2"
        android:maxLength="20"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/view_height_16"
        android:layout_marginTop="@dimen/view_space_20"
        android:layout_marginBottom="@dimen/view_space_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:background="@color/contact_divider"
        android:layout_height="@dimen/view_height_12"/>
    <LinearLayout
        android:id="@+id/rl_start_time"
        android:layout_marginLeft="@dimen/dp_10"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/start_time"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_start_time"
            android:layout_marginRight="@dimen/dp_10"
            android:gravity="center"
            android:layout_marginTop="@dimen/view_height_8"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:background="@color/contact_divider"
        android:layout_height="@dimen/divider_size_2"/>
    <LinearLayout
        android:id="@+id/rl_conference_time"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/conference_time"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/tv_conference_time"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/view_height_8"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/fifth_minute"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:background="@color/contact_divider"
        android:layout_height="@dimen/view_height_12"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/view_height_45"
        android:text="@string/join_member"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/text_primary"
        android:layout_marginLeft="@dimen/text_size_22"
        android:layout_height="wrap_content" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_member"
        android:layout_marginTop="5dp"
        android:paddingLeft="@dimen/view_height_22"
        android:paddingRight="@dimen/view_height_22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/bt_create"
            android:layout_marginBottom="@dimen/view_height_50"
            android:layout_centerHorizontal="true"
            android:text="@string/join_conference"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/view_space_40"
            android:layout_marginRight="@dimen/view_space_40"
            android:layout_alignParentBottom="true"
            android:background="@drawable/shape_login_next_bg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height_40" />
    </RelativeLayout>
</LinearLayout>