<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/status_bar"
    >
    <FrameLayout
        android:id="@+id/screen_fl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    <RelativeLayout
        android:id="@+id/screen_share_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@color/transparent_50"
        >
        <TextView
            android:id="@+id/top_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect_share_screen"
            android:background="@color/transparent_50"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_12"
            >
        </TextView>
        <ImageButton
            android:id="@+id/call_group_add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/view_space_14"
            android:background="@null"
            android:contentDescription="@null"
            android:paddingLeft="@dimen/view_space_8"
            android:paddingRight="@dimen/view_space_8"
            android:src="@drawable/ic_call_group_add"
            android:visibility="gone"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/transparent_50"
            android:layout_below="@+id/top_text_title"
            >
            <TextView
               android:id="@+id/tv_joined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/joined_member_share_screen"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_12"
                />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/members_head_icon_rv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/view_space_8"
                android:layout_marginRight="@dimen/view_space_8"
                android:orientation="horizontal"
                android:visibility="visible"
                />
            <TextView
                android:layout_marginTop="@dimen/dp_10"
                android:id="@+id/tv_to_join"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/invited_member_share_screen"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_12"
                />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/invite_head_icon_rv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/top_text_title"
                android:layout_marginLeft="@dimen/view_space_8"
                android:layout_marginRight="@dimen/view_space_8"
                android:orientation="horizontal"
                android:visibility="visible"

                />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/call_group_control_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_space_120"
        android:layout_gravity="bottom"
        android:background="@drawable/ic_camera_bg"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/view_space_32"
        >
        <Button
            android:id="@+id/call_group_switch_speaker_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:drawablePadding="@dimen/view_space_8"
            android:drawableTop="@drawable/selector_call_switch_speaker2"
            android:text="@string/speaker"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_12"
            style="?android:attr/borderlessButtonStyle"
            android:visibility="visible"
            />

        <Button
            android:id="@+id/call_group_hang_up_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:drawablePadding="@dimen/view_space_8"
            android:drawableTop="@drawable/selector_call_hang_up"
            android:text="@string/hang_up"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_12"
            style="?android:attr/borderlessButtonStyle"
            />

        <Button
            android:id="@+id/call_group_switch_mute_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:drawablePadding="@dimen/view_space_8"
            android:drawableTop="@drawable/selector_call_switch_mute2"
            android:text="@string/mute"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_12"
            style="?android:attr/borderlessButtonStyle"
            android:visibility="visible"
            />


    </LinearLayout>
</FrameLayout>