<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/view_height_134"
    android:layout_height="wrap_content"
    android:background="@drawable/btn_bg"
    android:divider="@drawable/shape_divider_horizontal"
    android:dividerPadding="@dimen/view_space_16"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/add_friend_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height_44"
        android:layout_gravity="center_vertical"
        android:background="@drawable/selector_bottom_item_bg"
        android:drawablePadding="@dimen/view_space_16"
        android:gravity="center"
        android:paddingLeft="@dimen/view_space_16"
        android:paddingRight="@dimen/view_space_16"
        android:text="@string/add_contact"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_size_14"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size_0.5"
        android:background="@color/primary_divider"/>
    <TextView
        android:id="@+id/create_group_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height_44"
        android:layout_gravity="center_vertical"
        android:background="@drawable/selector_bottom_item_bg"
        android:drawablePadding="@dimen/view_space_16"
        android:gravity="center"
        android:paddingLeft="@dimen/view_space_16"
        android:paddingRight="@dimen/view_space_16"
        android:text="@string/create_group1"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_size_14"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size_0.5"
        android:background="@color/primary_divider"/>
    <TextView
        android:id="@+id/scan_tv"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height_44"
        android:layout_gravity="center_vertical"
        android:background="@drawable/selector_bottom_item_bg"
        android:drawableLeft="@drawable/ic_scan"
        android:drawablePadding="@dimen/view_space_16"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/view_space_16"
        android:paddingRight="@dimen/view_space_16"
        android:text="@string/scan"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_size_14"
        />
</LinearLayout>
