<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/user_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="32dp"
        android:paddingTop="64dp"
        >

        <ImageView
            android:id="@+id/peer_head_iv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@null"
            android:src="@drawable/default_head_user"
            />

        <TextView
            android:id="@+id/peer_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/view_space_8"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:maxWidth="96dp"
            android:text="peer"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_size_14"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/call_hint_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_info_layout"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/waiting_for_the_other_answer"
        android:textColor="@color/cube_secondary_text"
        android:textSize="@dimen/text_size_16"
        android:visibility="visible"
        />

    <LinearLayout
        android:weightSum="3"
        android:id="@+id/call_control_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/view_space_24"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/call_switch_speaker_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@null"
            android:drawablePadding="@dimen/view_space_8"
            android:drawableTop="@drawable/selector_call_switch_speaker1"
            android:text="@string/speaker"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_size_12"
            style="?android:attr/borderlessButtonStyle"
            android:visibility="gone"

            />

        <Button
            android:id="@+id/call_cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:drawablePadding="@dimen/view_space_8"
            android:drawableTop="@drawable/selector_call_hang_up"
            android:text="@string/cancel"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_size_12"
            style="?android:attr/borderlessButtonStyle"
            />

        <Button
            android:id="@+id/call_switch_mute_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@null"
            android:drawablePadding="@dimen/view_space_8"
            android:drawableTop="@drawable/selector_call_switch_mute1"
            android:text="@string/mute"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_size_12"
            style="?android:attr/borderlessButtonStyle"
            android:visibility="gone"
            />

    </LinearLayout>
</RelativeLayout>